cleanup Sonar issues in authnz plugins (#3791)
* cleanup Sonar issues

* fix javadoc

* fix test

* fix replace